--- a/gb/21/6/25/n13048047.md
+++ b/gb/21/6/25/n13048047.md
@@ -1,13 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/bgpzwe3866/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bgpzwe3866/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bgpzwe3866/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bgpzwe3866/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bgpzwe3866/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bgpzwe3866/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bgpzwe3866/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bgpzwe3866/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bgpzwe3866/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bgpzwe3866/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bgpzwe3866/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bgpzwe3866/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bgpzwe3866/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bgpzwe3866/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>七一前 美议员提重磅决议 批中共迫害人权100年</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>七一前 美提重磅决议 批中共侵人权百年</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/d5b497489604a2658e6c5665818830f4-600x400.jpg" />
 <h6>中共准备庆祝建党百年之际，迈克?加拉格尔（Mike Gallagher）等美国联邦众议员推出一份决议，谴责中共侵犯人权100年。(Alex Wong/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2021年06月26日讯】（大纪元记者张婷综合报导）中共正准备<ahref="https://github.com/bgpzwe3866/djy/blob/master/gb/tag/%E4%B8%83%E4%B8%80.md#1">七一</a>庆祝建党100周年之际，美国国会众议院的一个两党小组推出一份将触动中共敏感神经的重磅决议，谴责中共残酷对待中国人民、侵犯<ahref="https://github.com/bgpzwe3866/djy/blob/master/gb/tag/%E4%BA%BA%E6%9D%83.md#1">人权</a>100年。议员们强调，中共建党百年不是庆祝的理由，而是反思中共犯下的滔天罪行，并向受害者致敬的时候。</p>
-<p>威斯康星州联邦共和党众议员迈克?加拉格尔（Mike Gallagher）于周五（6月25日）提出了一份决议，“谴责中国共产党100年严重侵犯<ahref="https://github.com/bgpzwe3866/djy/blob/master/gb/tag/%E4%BA%BA%E6%9D%83.md#1">人权</a>”，同时也表示美国与那些“为自由而斗争的中国人民站在一起”。</p>
+	<p>【大纪元2021年06月26日讯】（大纪元记者张婷综合报导）中共正准备<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%83%E4%B8%80.md#1">七一</a>庆祝建党100周年之际，美国国会众议院的一个两党小组推出一份将触动中共敏感神经的重磅决议，谴责中共残酷对待中国人民、侵犯<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%BA%E6%9D%83.md#1">人权</a>100年。议员们强调，中共建党百年不是庆祝的理由，而是反思中共犯下的滔天罪行，并向受害者致敬的时候。</p>
+<p>威斯康星州联邦共和党众议员迈克?加拉格尔（Mike Gallagher）于周五（6月25日）提出了一份决议，“谴责中国共产党100年严重侵犯<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%BA%E6%9D%83.md#1">人权</a>”，同时也表示美国与那些“为自由而斗争的中国人民站在一起”。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow:hidden;"><a style="width: 100%; height: 170px;" frameborder="no" scrolling="no" seamless src="https://player.captivate.fm/episode/97e75318-b72e-4b40-9249-ca9dd128449f"></a></div>
+<p><strong>（听更多请至<ahref="https://github.com/hxcaik307/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
 <h2>加拉格尔：共产党的历史是镇压、酷刑和种族灭绝</h2>
 <p>“过去的一个世纪以来，中国共产党一再侵犯基本人权，残酷对待自己的公民。”加拉格尔告诉《华盛顿观察家报》，共产党的故事是镇压、酷刑、大规模监禁和种族灭绝。</p>
 <p>“这个百年不是庆祝的理由——现在是反思党所犯下的罪恶行径，并向在党的残酷政权下遭受苦难的数千万受害者致敬的时候。”他说。</p>
@@ -17,53 +20,47 @@
 <h2>决议案例数中共恶行 包括迫害法轮功和基督徒</h2>
 <p>在一连串的侵权行为中，众议院的这份决议指出了中共在1940年代的“大规模土改运动”，当时中共杀害了200万至300万人；1951年和1952年的“三反”和“五反”运动，导致大量人被处决和被迫自杀。</p>
 <p>该决议还详细介绍了毛泽东在1950年代末至1960年代初的“大跃进”，“造成了有史以来最严重的人为灾难之一，毛泽东的农业集体化造成了灾难性的饥荒，导致多达2000万至4000万人饿死”。决议还强调了毛在1966年至1976年搞的十年文化大革命，“数百万人被任意逮捕、酷刑和处决，估计有100万至3500万人”。</p>
-<p>这份决议还提到了中共的计划生育政策和89年天安门大屠杀事件等。</p>
+<p>这份决议还提到了中共的计划生育政策和1989年天安门大屠杀事件等。</p>
 <p>众议院的两党决议也指出了中共近些年来的侵权行为。决议特别提到，“自1999年以来，中国共产党在中国和全球范围内开展了一场广泛运动，以消除法轮功宗教活动，使用的镇压方法包括任意拘留、强迫劳动、身体酷刑、未经同意摘取器官，在某些情况下甚至是死亡。”</p>
 <p>决议还说，中共政府“打击基督教活动，迫使教堂拆除尖塔，迫害信徒，并迫使家庭教会关门”。</p>
 <p>该决议还指出了中共的“猎狐行动”。联邦调查局局长克里斯托弗?雷（Christopher Wray）称这是“习总书记针对他认为有威胁的、生活在中国境外的中国公民的全面行动”——包括生活在美国的目标群体。</p>
 <p>此外，决议还谴责了中共对香港的最新打压；镇压藏人以及中共在新疆地区犯下的反人类罪和种族灭绝罪；以及中共当局无理打压公民记者张展。张展因报导武汉疫情而遭中共判刑4年。</p>
-<p>在下周<ahref="https://github.com/bgpzwe3866/djy/blob/master/gb/tag/%E4%B8%83%E4%B8%80.md#1">七一</a>庆祝之前，中共政府正在进行宣传运动，包括在全国范围内推广最新修订版的《中国共产党简史》，简史长达531页，赞美毛泽东，略过了大跃进期间死亡的数千万人，无视执政党的失败。</p>
+<p>在下周<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%83%E4%B8%80.md#1">七一</a>庆祝之前，中共政府正在进行宣传运动，包括在全国范围内推广最新修订版的《中国共产党简史》，简史长达531页，赞美毛泽东，略过了大跃进期间死亡的数千万人，无视执政党的失败。</p>
 <p>责任编辑：林妍#</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/14/n13021448.md#1">G7公报首提台海  直指中共人权问题</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/15/n13023933.md#1">欧盟：欧中分离主要原因是中共人权记录</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/18/n13031547.md#1">父亲节的悲哀 他们因信仰被中共虐杀</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/22/n13040139.md#1">44国批中共人权 中共轰加人权 特鲁多怒怼</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/14/n13021448.md#1">G7公报首提台海  直指中共人权问题</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/15/n13023933.md#1">欧盟：欧中分离主要原因是中共人权记录</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/18/n13031547.md#1">父亲节的悲哀 他们因信仰被中共虐杀</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/22/n13040139.md#1">44国批中共人权 中共轰加人权 特鲁多怒怼</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/14/n11939875.md#1" target="_blank">“红色殿堂”里的刀光剑影</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741126.md#1" target="_blank">在家暴进化论中堕落 一本书让他翻转人生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/19/n9864143.md#1" target="_blank">毛泽东诗词中的抄袭现象</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/2/n10610921.md#1" target="_blank">8岁自闭儿奇迹“开心锁” 变身最快乐男孩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/18/n13031032.md#1">神机妙算的孔明 面临成败生死如何看天意？</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/13/n13019873.md#1">【忽必烈传】南宋气数尽 蒙元攻下襄樊</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/14/n13021756.md#1">【小宇宙传说】巨人现身？世界各地的巨大脚印</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/16/n13026383.md#1">出入冥界神界看到过去未来事  他们捎给人什么讯息？</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/5/14/n12948096.md#1">【金色种子】一位走入大法修炼的气功师</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/24/n13045778.md#1">【新闻看点】武汉多种病毒早传播？NIH为何删资料</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/24/n13045773.md#1">【时事纵横】董经纬官媒露面？武毒所连爆丑闻</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/24/n13045139.md#1">【财商天下】三万重兵入京？美吁重金赏投诚</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/23/n13042775.md#1">董经纬投诚？美官员罕见否认此敏感话题</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/23/n13042718.md#1">中共搬叛党者遭灭门案示警 蔡霞：山雨欲来</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/23/n13041847.md#1">【新闻大家谈】内部暗潮涌？中共发血腥警告</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/22/n13040404.md#1">陆女星陈好教授职称掀风波 校方紧急撤下头衔</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/24/n13045511.md#1">杜汶泽聘用《苹果》失业员工 港人直呼感动</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/23/n13042921.md#1">被节目测体重仅45公斤 杨颖惊人饭量引热议</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/23/n13041118.md#1">陈零九康复后首露面 谈有后遗症“恐慌”</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/23/n13042428.md#1">贾永婕曝子瑜捐PAPR助台湾抗疫：她的生日愿望</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/17/n13029449.md#1">打辉瑞、莫德纳疫苗出现心脏问题？警惕3症状</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/23/n13042201.md#1">打疫苗后现死亡案例？医师：2种情况暂缓施打</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/21/n13037340.md#1">瘦小腹很简单！消内脏脂肪食物前10名</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/23/n13041224.md#1">为了救主人 美国忠狗被有毒的响尾蛇咬伤</a></li>
-<li><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/24/n13044254.md#1">日本小学生意外跟野熊道早安 熊被吓跑了</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bgpzwe3866/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bgpzwe3866/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/25/n13048047.htm">七一前 美议员提重磅决议 批中共迫害人权100年</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/25/n13048047.htm">七一前 美提重磅决议 批中共侵人权百年</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bgpzwe3866/djy/blob/master/gb/21/6/25/n13048047.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bgpzwe3866/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bgpzwe3866/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bgpzwe3866/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bgpzwe3866/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/6/25/n13048047.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
